# erob-ros2-control

./: .gitignore  LICENSE  README.md
docs/: architecture.md  safety.md  setup.md
src/control_gui/: README.md  error_analysis.py  joint_pose_control.py
src/erob_description/: CMakeLists.txt  package.xml
src/erob_description/config/: controllers.yaml
src/erob_description/launch/: hardware.launch.py  moveit.launch.py
src/erob_description/meshes/: L_elbow.STL  L_elbow_low.STL  L_shoulder_1.STL  L_shoulder_1_low.STL  L_shoulder_2.STL  L_shoulder_2_low.STL  L_shoulder_3.STL  L_shoulder_3_low.STL  L_wrist_1.STL  L_wrist_1_low.STL  L_wrist_2.STL  L_wrist_2_low.STL  L_wrist_3.STL  L_wrist_3_low.STL  R_elbow.STL  R_elbow_low.STL  R_shoulder_1.STL  R_shoulder_1_low.STL  R_shoulder_2.STL  R_shoulder_2_low.STL  R_shoulder_3.STL  R_shoulder_3_low.STL  R_wrist_1.STL  R_wrist_1_low.STL  R_wrist_2.STL  R_wrist_2_low.STL  R_wrist_3.STL  R_wrist_3_low.STL  base_link_low.STL  head.STL  head_low.STL  neck.STL  neck_low.STL
src/erob_description/urdf/: erob.urdf  erob_hardware.urdf.xacro  erob_real.ros2_control.xacro
src/erob_hardware/: CMakeLists.txt  erob_hardware.xml  package.xml
src/erob_hardware/include/erob_hardware/: erob_hardware_interface.hpp
src/erob_hardware/src/: erob_hardware_interface.cpp
src/erob_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/erob_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  shu_pr03.ros2_control.xacro  shu_pr03.srdf  shu_pr03.urdf.xacro
src/erob_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit_bridge/: CMakeLists.txt  package.xml
src/moveit_bridge/launch/: bridge.launch.py
src/moveit_bridge/src/: moveit_bridge_node.cpp
